# Figures

./: CMakeLists.txt  README.md
figures/: figure.cpp  figure.h  i_figure.h
figures/point/: point.cpp  point.h
figures/right_triangle/: right_triangle.cpp  right_triangle.h
figures/segment/: Segment.cpp  Segment.h
figures/triangle/: Triangle.cpp  Triangle.h
include/: Collection.h  Figure.h  Point.h  RightTriangle.h  Segment.h  Triangle.h  collection.h  figure.h  point.h  right_triangle.h  segment.h  triangle.h
lib/collection/: Collection.cpp  Collection.h
src/: Collection.cpp  Figure.cpp  Point.cpp  RightTriangle.cpp  Segment.cpp  Triangle.cpp  collection.cpp  figure.cpp  main.cpp  point.cpp  right_triangle.cpp  segment.cpp  triangle.cpp
